History of Win32::API perl extension.

2012-11-21  Win32::API v0.74    bulk88
   - Fixed, non threaded Perl fix from Reini Urban
   - Fixed, Perl 5.8 in Struct.pm syntax error (cpantesters report)
   - Fixed, LNK 4210 warning on >= VS 2005 fixed
   - Fixed, misc POD

2012-10-20  Win32::API v0.73    bulk88
   - Known Issue, IATPatch usually does not work on Cygwin
   - Fixed, now works on 32 bit Cygwin Perl
   - Fixed, now works on 32 bit Perl with 64 bit IVs
   - Fixed, misc POD
   - Added, check for cygpath tool on ::API for Cygwin 
   - Fixed, cygpath fix from Jerry D. Hedden
   - Fixed, ::Callback's DLL failed to load in DynaLoader on newer
     (Strawberry Perl 5.16.*) Mingws due to newer Mingws starting to always
     include Static TLS in DLLs
   - Fixed, ::API on newer 32 bit Mingws (Strawberry Perl 5.16.*) crashed on
     all cdecl calls due to different optimization defaults in newer Mingws
   - Improved, some tests were hardened
   - Fixed, should build on ActiveState's PPM system

2012-10-16  Win32::API v0.72    cosimo
   - Improved Callback tests by properly detecting native or ithreads
     fork capability. Thanks to Steve Hay for the patch.

2012-10-15  Win32::API v0.71    bulk88
   - API Change, UseMI64 changed to always return old value, not old on no
     setting and new on setting
   - Added, "in" for ::API and "out" for ::Callback are automatically
     treated as Math::Int64 objects if they are refs, a call to UseMI64 is
     recommended but not mandatory now
   - Half Fixed, on a fork, the child interp free the parent's Win32::API DLL
     HMODULE causing access violation, though a problem with unicode path names
     containing characters not in the local CP probably exists
   - Added, support for forking to Win32::API/Win32::API::More, not ::Callback
   - Added, support for WINAPI, NTAPI, CALLBACK, WINAPIV calling conventions
   - Added, Win32::API::Callback::IATPatch

2012-08-16  Win32::API v0.70_02    bulk88