@@ -58,7 +58,7 @@ use File::Basename ();
 #######################################################################
 # STATIC OBJECT PROPERTIES
 #
-$VERSION = '0.74';
+$VERSION = '0.75';
 
 #### some package-global hash to
 #### keep track of the imported
